<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">maggie_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_weekly_task_scr">Weekly Task Scramble</string>
  <string name="msg_photo_verificat">Photo Verification: Required</string>
  <string name="lbl_your_schedule">Your schedule:</string>
  <string name="lbl_m">M</string>
  <string name="msg_weekly_assigned">Weekly Assigned Tasks | 2/3</string>
  <string name="lbl_10_tasks">10 Tasks</string>
  <string name="msg_you_are_67_don">You are 67% done with your tasks for the week!</string>
  <string name="lbl_67">67%</string>
  <string name="lbl_23">23</string>
  <string name="lbl_24">24</string>
  <string name="lbl_task_completed">Task Completed</string>
  <string name="lbl_21">21</string>
  <string name="lbl_s">S</string>
  <string name="lbl_t">T</string>
  <string name="lbl_22">22</string>
  <string name="lbl_cook_dinner">Cook dinner</string>
  <string name="lbl_w">W</string>
  <string name="lbl_25">25</string>
  <string name="lbl_26">26</string>
  <string name="msg_due_date_sat">Due Date: Sat, Jan 7 </string>
  <string name="msg_photo_verificat2">Photo Verification: </string>
  <string name="msg_photo_verificat3">Photo Verification:</string>
  <string name="lbl_task_removed">Task Removed</string>
  <string name="msg_roommate_join_l">Roommate Join/Left</string>
  <string name="msg_john_smith_s_ac">John Smith\u2019s Achievments</string>
  <string name="lbl_off">Off</string>
  <string name="lbl_notes2">Notes:</string>
  <string name="lbl_room_name2">Room name:</string>
  <string name="msg_enter_code">Enter code:
__________________</string>
  <string name="lbl_create_new_task">Create New Task</string>
  <string name="lbl_add_tasks">Add tasks:</string>
  <string name="lbl_create_a_room">+ Create a Room</string>
  <string name="msg_achievement_com">Achievement Completed</string>
  <string name="lbl_take_trash_out">Take trash out</string>
  <string name="lbl_sat_jan_7"> Sat, Jan 7 </string>
  <string name="lbl_notifications">Notifications:</string>
  <string name="msg_scramble_day_s">Scramble Day: Sundays</string>
  <string name="lbl_chore_champ">Chore
Champ</string>
  <string name="lbl_create_a_room2">Create a Room</string>
  <string name="msg_5_daily_check_i">5 Daily Check Ins</string>
  <string name="msg_first_to_comple">First to Complete Tasks: 20/50</string>
  <string name="lbl_chorecarma">ChoreCarma</string>
  <string name="msg_of_chores_compl">of chores
completed</string>
  <string name="lbl_f">F</string>
  <string name="lbl_chore_limit_20">Chore Limit: 20</string>
  <string name="lbl_81">81%</string>
  <string name="lbl_jane_smith">Jane Smith</string>
  <string name="lbl_completion">Completion: </string>
  <string name="lbl_room_name">\u201cRoom Name\u201d</string>
  <string name="lbl_chore_list">Chore List</string>
  <string name="lbl_wash_dishes">Wash dishes</string>
  <string name="lbl_join_a_room">Join a Room</string>
  <string name="msg_assigned_to">Assigned to: __________</string>
  <string name="msg_weekly_chorecha">Weekly ChoreChamp: 30/50</string>
  <string name="lbl_create_new_room">Create New Room</string>
  <string name="lbl_due_date">Due Date:</string>
  <string name="lbl_john_smith">John Smith</string>
  <string name="lbl_sub_task_none">Sub Task: none</string>
  <string name="lbl_assigned_to_you">Assigned to you</string>
  <string name="lbl_new_task_added">New Task Added</string>
  <string name="lbl_optional">Optional</string>
  <string name="msg_set_due_date_t">Set Due Date: Thurs, Jan 24 </string>
  <string name="msg_remember_to_swe">remember to sweep 
under table!!</string>
  <string name="lbl_sub_task">Sub Task:</string>
  <string name="lbl_73">73%</string>
  <string name="lbl_photo_verify">Photo Verify</string>
  <string name="lbl_notes">Notes: </string>
  <string name="msg_link_google_cal">Link Google Calendar</string>
  <string name="lbl_achievements">Achievements</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_task_edited">Task Edited</string>
  <string name="lbl_1st_task">1st Task </string>
  <string name="msg_completion_pho">Completion: Photo Verify</string>
  <string name="lbl_sweep_floors">Sweep floors</string>
  <string name="lbl_task_name">\u201cTask Name\u201d</string>
  <string name="msg_john_smith_s_sc">John Smith\u2019s Schedule</string>
  <string name="lbl_sweep_floor">Sweep floor</string>
  <string name="lbl_chorechamp2">ChoreChamp</string>
  <string name="lbl_required">Required</string>
  <string name="lbl_your_schedule2">Your Schedule</string>
  <string name="lbl_none"> none</string>
  <string name="msg_finished_tasks">Finished tasks before due date</string>
  <string name="lbl_th">TH</string>
</resources>
