<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAddtasks"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylebluegray_50">
        <LinearLayout android:id="@+id/linearColumnarrowleft"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_9pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                    <ImageView android:id="@+id/imageQuestion"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_316pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_question_gray_800"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_question_gray_800"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <ImageView android:id="@+id/imageMop"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_64pxh"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_61pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_mop"
                tools:ignore="ContentDescription" tools:src="@drawable/img_mop"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowtaskname"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTaskName"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_task_name"
                    style="@style/txtInterbold24" tools:text="@string/lbl_task_name"/>
                <ImageView android:id="@+id/imageEdit"
                    android:layout_height="@dimen/_19pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_edit_gray_501"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_edit_gray_501"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtAssignedto"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_assigned_to"
                style="@style/txtInterregular19" tools:text="@string/msg_assigned_to"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_set_due_date_t"
                style="@style/txtInterregular20_3" tools:text="@string/msg_set_due_date_t"/>
            <LinearLayout android:id="@+id/linearRowm"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnm"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_2">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtM"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_14pxh"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_m"
                        style="@style/txtInterregular17" tools:text="@string/lbl_m"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyOne"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_14pxh"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_21"
                        style="@style/txtIntersemibold20" tools:text="@string/lbl_21"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnt"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_2">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtT"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_t"
                        style="@style/txtInterregular17" tools:text="@string/lbl_t"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyTwo"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_22"
                        style="@style/txtIntersemibold20" tools:text="@string/lbl_22"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnw"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_2">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtW"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_w"
                        style="@style/txtInterregular17" tools:text="@string/lbl_w"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyThree"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_23"
                        style="@style/txtIntersemibold20" tools:text="@string/lbl_23"/>
                </LinearLayout>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnth"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylebluegray_2">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTH"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_12pxh"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_th"
                        style="@style/txtInterregular17_2" tools:text="@string/lbl_th"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyFour"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_24"
                        style="@style/txtIntersemibold20_3" tools:text="@string/lbl_24"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnf"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylewhite_2">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtF"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_f"
                        style="@style/txtInterregular17" tools:text="@string/lbl_f"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwentyFive"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_25"
                        style="@style/txtIntersemibold20" tools:text="@string/lbl_25"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRownotes"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNotes"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.76"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_notes2"
                    style="@style/txtInterregular20_3" tools:text="@string/lbl_notes2"/>
                <ImageView android:id="@+id/imageEditOne"
                    android:layout_height="@dimen/_19pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_edit_gray_501"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_edit_gray_501"/>
            </LinearLayout>
        </LinearLayout>
        <View android:background="@color/gray_800"
            android:id="@+id/lineVectorThree"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_37pxv" android:layout_width="@dimen/_281pxh"/>
        <View android:background="@color/gray_800"
            android:id="@+id/lineVectorFour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_42pxv" android:layout_width="@dimen/_281pxh"/>
        <View android:background="@color/gray_800"
            android:id="@+id/lineVectorFive"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_2pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_41pxv" android:layout_width="@dimen/_281pxh"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtPhotoVerificat"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_photo_verificat"
            style="@style/txtInterregular20_3" tools:text="@string/msg_photo_verificat"/>
    </LinearLayout>
</layout>
