<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearRowarrowleft"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_25pxh"
        android:layout_marginStart="@dimen/_18pxh"
        android:layout_marginTop="@dimen/_26pxv"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylebluegray_50">
        <LinearLayout android:id="@+id/linearTaskcompletion"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylebluegray_50">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginBottom="@dimen/_817pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_9pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
            <LinearLayout android:id="@+id/linearColumnquestion"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_weight="0.97" android:layout_width="0dp" android:orientation="vertical">
                <ImageView android:id="@+id/imageQuestion"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_297pxh"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_question_gray_800"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_question_gray_800"/>
                <ImageView android:id="@+id/imageFactcheck"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_54pxh"
                    android:layout_marginEnd="@dimen/_118pxh"
                    android:layout_marginStart="@dimen/_118pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="@dimen/_60pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_factcheck"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_factcheck"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSweepfloors"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_70pxh"
                    android:layout_marginStart="@dimen/_70pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_sweep_floors"
                    style="@style/txtIntersemibold24" tools:text="@string/lbl_sweep_floors"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAssignedtoyou"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_78pxh"
                    android:layout_marginStart="@dimen/_78pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_assigned_to_you"
                    style="@style/txtInterregular18" tools:text="@string/lbl_assigned_to_you"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnsubtasknone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylebluegray_3">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSubTasknone"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_23pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_25pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_sub_task_none"
                        style="@style/txtInterregular20_1" tools:text="@string/lbl_sub_task_none"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguage"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_23pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_24pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/msg_due_date_sat"
                        style="@style/txtInterregular20_1" tools:text="@string/msg_due_date_sat"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowlanguageOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLanguageOne"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_23pxv"
                            android:layout_weight="0.25"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@string/lbl_notes"
                            style="@style/txtInterbold20" tools:text="@string/lbl_notes"/>
                        <TextView android:id="@+id/txtRemembertoswe"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.75"
                            android:layout_width="0dp"
                            android:text="@string/msg_remember_to_swe"
                            style="@style/txtInterregular20_2" tools:text="@string/msg_remember_to_swe"/>
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCompletionPho"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_26pxv"
                        android:layout_marginEnd="@dimen/_23pxh"
                        android:layout_marginStart="@dimen/_23pxh"
                        android:layout_marginTop="@dimen/_19pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@string/msg_completion_pho"
                        style="@style/txtInterbold20" tools:text="@string/msg_completion_pho"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearColumnrefresh"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_36pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_3">
                    <ImageView android:id="@+id/imageRefresh"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_marginEnd="@dimen/_26pxh"
                        android:layout_marginStart="@dimen/_26pxh"
                        android:layout_marginTop="@dimen/_27pxv"
                        android:layout_width="@dimen/_22pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_refresh"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_refresh"/>
                    <ImageView android:id="@+id/imageCamera"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_56pxh"
                        android:layout_marginBottom="@dimen/_20pxv"
                        android:layout_marginEnd="@dimen/_102pxh"
                        android:layout_marginStart="@dimen/_102pxh"
                        android:layout_marginTop="@dimen/_77pxv"
                        android:layout_width="@dimen/_62pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_camera"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_camera"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
